# SoftMig

./: .gitignore  CHANGES.md  README.md  UNUSED_CODE_REPORT.md  build.sh  nvidia-smi-hook.sh  temp_allocator.c  temp_multiprocess.c  test_softmig.sh
docs/: BUGFIX_struct_mismatch_and_suggestions.md  BUILD_AND_INSTALL.md  FIXES_TO_APPLY.md  IMPROVEMENT_IDEAS.md  MASTER_FIX_CHECKLIST.md  NVML_STRUCT_MISMATCH_HISTORY.md  PROJECT_STATUS.md  SESSION_HANDOFF.md  SLURM_INTEGRATION.md  TESTING.md  TROUBLESHOOTING.md  UOFA_VULCAN_NOTES.md  USAGE.md
docs/examples/: epilog_softmig.sh  install_softmig.sh  prolog_softmig.sh
ops/: install_softmig_logrotate.sh  logrotate-softmig.conf  trim_softmig_active_logs.sh
src/: CMakeLists.txt  dlsym_resolve.c  gen_version_script.sh  libsoftmig.c  nvml_cache.c  process_utils.c  utils.c
src/allocator/: allocator.c  allocator.h
src/cuda/: CMakeLists.txt  context.c  device.c  event.c  graph.c  hook.c  memory.c  stream.c
src/include/: dlsym_resolve.h  libcuda_hook.h  libnvml_hook.h  libsoftmig.h  log_utils.h  memory_limit.h  nvml-subset.h  nvml_cache.h  nvml_override.h  process_utils.h  utils.h
src/multiprocess/: config_file.c  multiprocess_memory_limit.c  multiprocess_memory_limit.h  multiprocess_utilization_watcher.c  multiprocess_utilization_watcher.h  shrreg_tool.c
src/nvml/: CMakeLists.txt  hook.c  nvml_entry.c
test/: gpu_burn_lite.cu  nvml_probe.c  run_burn.sh  run_matrix.sh  run_multiproc.sh  run_multiproc_rt.sh  run_overnight.sh  run_whack.sh  runtime_hold.cu  suite_common.sh  suite_crossjob.sh  suite_direct.sh  suite_mixed.sh  suite_nvsmi.sh  suite_oom.sh  suite_sm.sh  suite_smoke.sh  suite_soak.sh  summarize.awk  test_nvml_process_filter.c
